[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Resources/FamiFont Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://SCenes/OptionsMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resources/OptionsMenu.tres" type="Theme" id=4]
[ext_resource path="res://Resources/Lato-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=4]
size = 62
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 100
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 100
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
custom_constants/margin_top = 86
custom_constants/margin_left = 68

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 68.0
margin_top = 240.0
margin_right = 567.0
margin_bottom = 600.0
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 1

[node name="GameTitle" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_top = -200.0
margin_right = 300.0
margin_bottom = -110.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "Game [color=#fec400]Title[/color]"
text = "Game Title"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = -100.0
margin_right = 300.0
margin_bottom = 15.0

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 21.0
margin_right = 499.0
margin_bottom = 127.0
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../OptionsButton")
custom_fonts/font = SubResource( 1 )
text = "Play Game"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 499.0
margin_bottom = 237.0
focus_neighbour_top = NodePath("../PlayButton")
focus_neighbour_bottom = NodePath("../QuitButton")
custom_fonts/font = SubResource( 2 )
text = "Options"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 241.0
margin_right = 499.0
margin_bottom = 347.0
focus_neighbour_top = NodePath("../OptionsButton")
focus_neighbour_bottom = NodePath("../PlayButton")
custom_fonts/font = SubResource( 3 )
text = "Quit Game"

[node name="OptionsMenu" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
